connexion sans token OK

--- a/views/connexion.ejs
+++ b/views/connexion.ejs
@@ -4,15 +4,16 @@
   <form  method="POST" action="/users">
   <table>
       <tr>
-      <td>email :</td>
+      <td>Email :</td>
       <td><input type="email" name="mail" ></td>
       </tr>
       <tr>
-      <td>mot de passe :</td>
+      <td>Mot de passe :</td>
       <td><input type="password" name="mdp" ></td>
       </tr>
       <tr>
       <td colspan="2"><input type="submit" value="Connecter" ></td>
+      <td colspan="2"><a href="/users/register" class="btn btn-primary" role="button">S'inscrire</a></td>
       </tr>
   </table>
   </form>
