--- a/views/header.ejs
+++ b/views/header.ejs
@@ -12,3 +12,6 @@
     <div class="ui negative message">
       <%= locals.error %>
     </div>
+    <div class="ui positive message">
+      <%= locals.success %>
+    </div>
