--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,27 +5,27 @@
   <table>
       <tr>
       <td>Email :</td>
-      <td><input type="email" name="mail" ></td>
+      <td><input type="email" name="mail"  ></td>
       </tr>
       <tr>
       <td>Mot de passe :</td>
-      <td><input type="password" name="mdp" ></td>
+      <td><input type="password" name="mdp" required ></td>
       </tr>
       <tr>
       <td>Confirmer mot de passe :</td>
-      <td><input type="password" name="mdp2" ></td>
+      <td><input type="password" name="mdp2" required ></td>
       </tr>
       <tr>
       <td>Nom :</td>
-      <td><input type="text" name="lastname" ></td>
+      <td><input type="text" name="lastname" required ></td>
       </tr>
       <tr>
       <td>Prénom :</td>
-      <td><input type="text" name="firstname" ></td>
+      <td><input type="text" name="firstname" required ></td>
       </tr>
       <tr>
       <td>Date de Naissance :</td>
-      <td><input type="date" name="birth" ></td>
+      <td><input type="date" name="birth" required ></td>
       </tr>
       <tr>
       <td>Département :</td>
