--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,14 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-a {
-  color: #00B7FF;
+
+.form-signin{
+  margin-left: 25%;
+  margin-right: 25%;
+  margin-top: 10%;
+}
+
+.col-sm-4{
+  margin-bottom: 3%;
+
 }
