--- a/views/connexion.ejs
+++ b/views/connexion.ejs
@@ -1,21 +1,13 @@
 <%- include('header') %>
-<body>
-  <h1>Connexion</h1>
-  <form  method="POST" action="/users">
-  <table>
-      <tr>
-      <td>Email :</td>
-      <td><input type="email" name="mail" ></td>
-      </tr>
-      <tr>
-      <td>Mot de passe :</td>
-      <td><input type="password" name="mdp" ></td>
-      </tr>
-      <tr>
-      <td colspan="2"><input type="submit" value="Connecter" ></td>
-      <td colspan="2"><a href="/users/register" class="btn btn-primary" role="button">S'inscrire</a></td>
-      </tr>
-  </table>
-  </form>
+  <form class="form-signin" method="POST", action="/users">
+    <h1 class="h3 mb-3 font-weight-normal">Connexion : </h1>
+    <label for="inputEmail" class="sr-only">Adresse Mail</label>
+    <input type="email" id="inputEmail" class="form-control" placeholder="Adresse Mail" name = "mail" required autofocus>
+    <label for="inputPassword" class="sr-only">Mot de Passe</label>
+    <input type="password" id="inputPassword" class="form-control" placeholder="Mot de Passe" name ="mdp" required>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Se Connecter</button>
+    <a class="btn btn-lg btn-primary btn-block" href ="/users/register">S'inscrire</a>
+</form>
+
 </body>
   </html>
