--- a/views/header.ejs
+++ b/views/header.ejs
@@ -3,15 +3,33 @@
   <head>
     <title>Pol'Events</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+    </style>
+
   </head>
-  <body>
+  <body class="text-center">
     <div class="container">
-      <a href="/">Acceuil</a>
+      <a href="/">Accueil</a>
       <a href="/users">Se connecter</a>
     </div>
     <div class="ui negative message">
       <%= locals.error %>
     </div>
-    <div class="ui positive message">
+    <span>
       <%= locals.success %>
-    </div>
+    </span>
