--- a/views/head/headerA.ejs
+++ b/views/head/headerA.ejs
@@ -25,7 +25,9 @@
   <body class="text-center">
     <div class="container">
       <a href="/">Accueil</a>
-      <a href="/users">Se connecter</a>
+      <a href="/admin/events">Les événements</a>
+      <a href="/users/logout">Se déconnecter</a>
+      <a href="/">Mode Normal</a>
     </div>
     <div class="ui negative message">
       <%= locals.error %>
