--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,4 +1,5 @@
-<%- include('header') %>
+<%- include('head/header') %>
+
   <form class="form-signin" method="POST", action="/users/register">
       <h1 class="h3 mb-3 font-weight-normal">Inscription : </h1>
       <label for="inputEmail" class="sr-only">Email</label>
