--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,10 +7,13 @@ body {
 .form-signin{
   margin-left: 25%;
   margin-right: 25%;
-  margin-top: 10%;
+  margin-top: 4%;
+}
+
+.btn btn-primary{
+  margin-top: 7%;
 }
 
 .col-sm-4{
   margin-bottom: 3%;
-
 }
