--- a/views/head/header.ejs
+++ b/views/head/header.ejs
@@ -22,18 +22,15 @@
     </style>
 
   </head>
+  <body class="text-center">
+    <div class="container">
+      <a href="/">Accueil</a>
+      <a href="/events">Les événements</a>
+      <a href="/resa">Mes réservations</a>
+      <a href="/users/logout">Se déconnecter</a>
+      <% if (locals.isAdmin == 1) { %>
+        <a href="/admin">Mode Admin</a>
+      <% } %>
+      <a href="/users/profil">Mon profil</a>
 
-<body class="text-center">
-  <form class="form-signin" method="POST", action="/users">
-    <h1 class="h3 mb-3 font-weight-normal">Connexion : </h1>
-    <label for="inputEmail" class="sr-only">Adresse Mail</label>
-    <input type="email" id="inputEmail" class="form-control" placeholder="Adresse Mail" name = "mail" required autofocus>
-    <label for="inputPassword" class="sr-only">Mot de Passe</label>
-    <input type="password" id="inputPassword" class="form-control" placeholder="Mot de Passe" name ="mdp" required>
-    <button class="btn btn-primary" type="submit">Se Connecter</button>
-    <a class="btn btn-primary" href ="/users/register">S'inscrire</a>
-
-</form>
-
-</body>
-  </html>
+    </div>
