--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -1,43 +1,57 @@
-<%- include('header') %>
-<body>
-  <h1>Bonjour <%= rows[0].prenom %>, voici ton profil : </h1>
-  <form action="/users/profil" method="POST">
-    <table>
-      <tr>
-      <td>Nom :</td>
-      <td><input type="text" name="lastname" value="<%= rows[0].nom %>" ></td>
-      </tr>
-      <tr>
-      <td>Prénom :</td>
-      <td><input type="text" name="firstname" value="<%= rows[0].prenom %>" ></td>
-      </tr>
-      <tr>
-      <td>Date de Naissance :</td>
-      <td><input type="date" name="birth" value="<%= rows[0].dateNaissance %>" ></td>
-      </tr>
-      <tr>
-      <td><h3>Modifier son mot de passe : </h3></td>
-      </tr>
-      <tr>
-      <td>Ancien Mot de passe : </td>
-      <td><input type="password" name="oldmdp" ></td>
-      </tr>
-      <tr>
-      <td>Nouveau mot de passe :</td>
-      <td><input type="password" name="newmdp" ></td>
-      </tr>
-      <tr>
-      <td>Confirmer nouveau mot de passe :</td>
-      <td><input type="password" name="newmdp2" ></td>
-      </tr>
-      <tr>
-      <td><input type="submit" value="Modifier" ></td>
-      <td><button type="button" name="retour"> Retour</button>
-      </tr>
-    </table>
-  </form>
+<%- include('head/header') %>
 
+<form class="form-signin" method="POST", action="/users/profil">
+    <h1 class="h3 mb-3 font-weight-normal">Bonjour <%= rows[0].prenom %>, voici ton profil :</h1>
 
+    <div class="form-group row">
+      <label for="inputName" class="col-sm-4 col-form-label">Nom : </label>
+      <div class="col-sm-8">
+        <input type="text" id="inputName" class="form-control" value="<%= rows[0].nom %>" name = "lastname" >
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <label for="inputDate" class="col-sm-4 col-form-label"> Prénom :</label>
+      <div class="col-sm-8">
+        <input type="text" id="inputFirstName" class="form-control" value="<%= rows[0].prenom %>" name ="firstname" >
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <label for="inputBirth" class="col-sm-4 col-form-label">Date de naissance :</label>
+      <div class="col-sm-8">
+        <input type="date" id="inputBirth" class="form-control" value="<%= rows[0].dateNaissance %>" name ="capacity" >
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <h3>Modifier mot de passe :</h3>
+    </div>
+
+    <div class="form-group row">
+      <label for="inputPsw" class="col-sm-4 col-form-label">Ancien mot de passe:</label>
+      <div class="col-sm-8">
+        <input type="password" id="inputePsw" class="form-control" placeholder="Ancien mot de passe" name ="oldPsw" >
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <label for="inputPsw1" class="col-sm-4 col-form-label">Nouveau mot de passe:</label>
+      <div class="col-sm-8">
+        <input type="password" id="inputePsw1" class="form-control" placeholder="Nouveau mot de passe" name ="newPsw1" >
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <label for="inputPsw1" class="col-sm-4 col-form-label">Nouveau mot de passe:</label>
+      <div class="col-sm-8">
+        <input type="password" id="inputePsw2" class="form-control" placeholder="Nouveau mot de passe" name ="newPsw2" >
+      </div>
+    </div>
+
+    <button class="btn btn-lg btn-primary" type="submit">Modifier</button>
+    <a href="/" class="btn btn-lg btn-secondary">Retour</a>
+</form>
 
 </body>
 </html>
