--- a/views/head/headerA.ejs
+++ b/views/head/headerA.ejs
@@ -20,6 +20,7 @@
         }
       }
     </style>
+    
 
   </head>
   <body class="text-center">
@@ -32,6 +33,9 @@
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" href="/admin/events">Les événements <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/admin/search">Rechercher personne <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/">Mode Normal</a>
