--- a/views/head/headerA.ejs
+++ b/views/head/headerA.ejs
@@ -20,7 +20,7 @@
         }
       }
     </style>
-    
+
 
   </head>
   <body class="text-center">
@@ -46,3 +46,10 @@
         </ul>
       </div>
     </nav>
+
+
+    <% if (locals.getSuccess != 0) { %>
+      <div class="alert alert-primary" role="alert">
+        <%= locals.getSuccess %>
+      </div>
+    <% } %>
