--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,5 +2,7 @@
 
   <h1>Pol'Events</h1>
   <p>Welcome to Pol'Events</p>
+  <p>Ce site vous permet de réserver votre place pour des évènements mis en place par Polytech.</p>
+  <p>C'est événements peuvent être en lien avec l'école (comme les journées portes ouvertes), des événements sportifs, ou bien des évènements organisés par des acteurs externes.</p>
 </body>
 </html>
