--- a/views/indexAdmin.ejs
+++ b/views/indexAdmin.ejs
@@ -1,6 +1,6 @@
 <%- include('head/headerA') %>
 
   <h1>Pol'Events</h1>
-  <p>Welcome to Pol'Events en mode admin</p>
+  <p>Bienvenue sur Pol'Events, vous êtes en mode admin</p>
 </body>
 </html>
